--- a/template/app/src/main/res/values/strings.xml
+++ b/template/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Sandbox</string>
-    <string name="widget_sandbox">Widget sandbox</string>
+    <string name="template_app_name">Sandbox</string>
+    <string name="template_widget_sandbox">Widget sandbox</string>
 </resources>
